--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
         docker buildx create --use
         docker buildx build \
           --file Dockerfile \
-          --tag alikhan7567/maybe whale test:latest \
+          --tag <alikhan7567>/<maybe whale test>:latest \
           --push .
 
     env:
